--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <title>Tyler Rosen's Portfolio</title>
 
     <!-- Links CSS -->
-
     <link rel="stylesheet" type="text/css" href="assets/css/style-white.css">
+    </div>
 
     <!-- Links Bootstrap -->
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
 </head>
 
 <body>
     <br>
-    <button id="theme">Change theme</button>
+    <button id="black-theme">Black theme</button>
+    <button id="white-theme">White theme</button>
     <h1>Test</h1>
 
 
