--- a/asymmetry/index.html
+++ b/asymmetry/index.html
@@ -12,7 +12,8 @@
     <title>Tyler Rosen Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
+    />
     <meta name="author" content="gettemplates.co" />
 
     <!-- Facebook and Twitter integration -->
@@ -44,7 +45,8 @@
     <!-- Flexslider -->
     <link rel="stylesheet" href="css/flexslider.css">
     <!-- Theme style  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-white.css">
+    <!--<link rel="stylesheet" href="css/style-black.css">-->
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -125,7 +127,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
                         <h2>About</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit
+                            ab aliquam dolor eius.</p>
                     </div>
                 </div>
             </div>
@@ -149,9 +152,6 @@
 
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-paper-clip"></i>
-									</span>
                                         <img src="images/icons/html-5.png" id="html" alt="HTML">
                                         <div class="feature-copy">
                                             <h3>HTML</h3>
@@ -161,9 +161,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-monitor"></i>
-									</span>
+                                        <img src="images/icons/css.png" id="css" alt="CSS">
                                         <div class="feature-copy">
                                             <h3>CSS</h3>
                                             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
@@ -172,9 +170,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-toggle"></i>
-									</span>
+                                        <img src="images/icons/javascript.png" id="javascript" alt="JS">
                                         <div class="feature-copy">
                                             <h3>JavaScript</h3>
                                             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
@@ -183,9 +179,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-layout"></i>
-									</span>
+                                        <img src="images/icons/jquery.png" id="jquery" alt="JQ">
                                         <div class="feature-copy">
                                             <h3>jQuery</h3>
                                             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
@@ -198,9 +192,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-pencil"></i>
-									</span>
+                                        <img src="images/icons/mysql.png" id="mysql" alt="mySQL">
                                         <div class="feature-copy">
                                             <h3>MySQL</h3>
                                             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
@@ -209,9 +201,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-cog"></i>
-									</span>
+                                        <img src="images/icons/mongodb.png" id="mongo" alt="MongoDB">
                                         <div class="feature-copy">
                                             <h3>MongoDB</h3>
                                             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
@@ -220,9 +210,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-layers"></i>
-									</span>
+                                        <img src="images/icons/node.png" id="node" alt="Node.js">
                                         <div class="feature-copy">
                                             <h3>Node.js</h3>
                                             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
@@ -231,9 +219,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="feature-left">
-                                        <span class="icon">
-										<i class="icon-search"></i>
-									</span>
+                                        <img src="images/icons/git.png" id="git" alt="Git">
                                         <div class="feature-copy">
                                             <h3>Git</h3>
                                             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
@@ -316,7 +302,7 @@
                         <div class="display-t">
                             <div class="display-tc">
                                 <div class="col-md-12">
-                                    <h3>If you have inqueries please email us at <a href="#">tylermrosen@gmail.com</a></h3>
+                                    <h3>If you have inqueries please email me at <a href="#">tylermrosen@gmail.com</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -336,7 +322,7 @@
                             </p>
                             <p class="pull-right">
                                 <ul class="gtco-social-icons pull-right">
-                                    <li><a href="#"><i class="icon-twitter"></i></a></li>
+                                    <li><a href="https://github.com/TylerRosen"><i class="icon-twitter"></i></a></li>
                                     <li><a href="#"><i class="icon-facebook"></i></a></li>
                                     <li><a href="#"><i class="icon-linkedin"></i></a></li>
                                 </ul>
