--- a/asymmetry/index.html
+++ b/asymmetry/index.html
@@ -322,9 +322,9 @@
                             </p>
                             <p class="pull-right">
                                 <ul class="gtco-social-icons pull-right">
-                                    <li><a href="https://github.com/TylerRosen"><i class="icon-twitter"></i></a></li>
+                                    <li><a href="https://github.com/TylerRosen"><i class="icon-github"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/"><i class="icon-linkedin"></i></a></li>
                                     <li><a href="#"><i class="icon-facebook"></i></a></li>
-                                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
                                 </ul>
                             </p>
                         </div>
