Added black/white buttons

--- a/asymmetry/index.html
+++ b/asymmetry/index.html
@@ -66,6 +66,10 @@
             <div class="gtco-container">
                 <div class="row">
                     <div class="col-sm-2 col-xs-12">
+                        <div class="buttons">
+                            <img src="images/icons/white-button.png" id="white" alt="White-button">
+                            <img src="images/icons/black-button.png" id="black" alt="Black-button">
+                        </div>
                         <div id="name"><a href="index.html">Tyler Rosen</a></div>
                     </div>
                     <div class="col-xs-10 text-right menu-1 main-nav">
@@ -358,6 +362,7 @@
         <!-- Main -->
         <script src="js/main.js"></script>
 
+    </div>
 </body>
 
 </html>
