--- a/asymmetry/index.html
+++ b/asymmetry/index.html
@@ -45,8 +45,7 @@
     <!-- Flexslider -->
     <link rel="stylesheet" href="css/flexslider.css">
     <!-- Theme style  -->
-    <link rel="stylesheet" href="css/style-white.css">
-    <!--<link rel="stylesheet" href="css/style-black.css">-->
+    <link rel="stylesheet" id ="theme" href="css/style-white.css">
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
