Created slider for theme change

--- a/assymetry/index.html
+++ b/assymetry/index.html
@@ -12,8 +12,7 @@
     <title>Tyler Rosen Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
-    />
+    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
     <meta name="author" content="gettemplates.co" />
 
     <!-- Facebook and Twitter integration -->
@@ -45,7 +44,7 @@
     <!-- Flexslider -->
     <link rel="stylesheet" href="css/flexslider.css">
     <!-- Theme style  -->
-    <link rel="stylesheet" id ="theme" href="css/style-white.css">
+    <link rel="stylesheet" id="theme" href="css/style-white.css">
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -64,12 +63,13 @@
         <nav class="gtco-nav" role="navigation">
             <div class="gtco-container">
                 <div class="row">
+                    <!-- Rounded switch -->
+                    <label class="switch">
+                        <input type="checkbox">
+                        <div class="slider round"></div>
+                        </label>
                     <div class="col-sm-2 col-xs-12">
-                        <div class="buttons">
-                            <img src="images/icons/white-button.png" id="white" alt="White-button">
-                            <img src="images/icons/black-button.png" id="black" alt="Black-button">
-                        </div>
-                        <div id="name"><a href="index.html">Tyler Rosen</a></div>
+                        <!--<div id="name"><a href="index.html">Tyler Rosen</a></div>-->
                     </div>
                     <div class="col-xs-10 text-right menu-1 main-nav">
                         <ul>
@@ -130,8 +130,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
                         <h2>About</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit
-                            ab aliquam dolor eius.</p>
+                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
                     </div>
                 </div>
             </div>
