Light/dark button now function properly

--- a/assymetry/index.html
+++ b/assymetry/index.html
@@ -67,9 +67,11 @@
                     <label class="switch">
                         <input type="checkbox">
                         <div class="slider round"></div>
+                        <br>
+                        <p>Light/Dark</p>
                         </label>
                     <div class="col-sm-2 col-xs-12">
-                        <!--<div id="name"><a href="index.html">Tyler Rosen</a></div>-->
+                        <div id="name"><a href="index.html">Tyler Rosen</a></div>
                     </div>
                     <div class="col-xs-10 text-right menu-1 main-nav">
                         <ul>
