Added projects to homepage

--- a/assymetry/index.html
+++ b/assymetry/index.html
@@ -90,24 +90,24 @@
         <div id="gtco-hero" class="js-fullheight" data-section="home">
             <div class="flexslider js-fullheight">
                 <ul class="slides">
-                    <li style="background-image: url(images/img_bg_1.jpg);">
+                    <li style="background-image: url(images/song-roulette.png">
                         <div class="overlay"></div>
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
-                                    <h2>Project 1 (Insert Later).</h2>
-                                    <!--<p><a href=insert link to project target="_blank" class="btn btn-primary btn-lg">View</a></p>-->
+                                    <h2>Song Roulette.</h2>
+                                    <p><a href="https://songroulette.herokuapp.com/" target="_blank" class="btn btn-primary btn-lg">View</a></p>
                                 </div>
                             </div>
                         </div>
                     </li>
-                    <li style="background-image: url(images/img_bg_2.jpg);">
+                    <li style="background-image: url(images/hang-movie.png);">
                         <div class="overlay"></div>
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
-                                    <h2>Project 2 (Insert Later)</h2>
-                                    <!--<p><a href=insert link to project target="_blank" class="btn btn-primary btn-lg">View</a></p>-->
+                                    <h2>Hang-Movie</h2>
+                                    <p><a href="https://hang-movie.herokuapp.com/" target="_blank" class="btn btn-primary btn-lg">View</a></p>
                                 </div>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
-                                    <h2>Project 3 (Insert Later)</h2>
+                                    <h2>Fantasizer</h2>
                                     <!--<p><a href=insert link to project target="_blank" class="btn btn-primary btn-lg">View</a></p>-->
                                 </div>
                             </div>
@@ -307,6 +307,13 @@
                             <div class="display-tc">
                                 <div class="col-md-12">
                                     <h3>If you have inqueries please email me at <a href="#">tylermrosen@gmail.com</a></h3>
+                                    <p class="pull-right">
+                                        <ul class="gtco-social-icons pull-right">
+                                            <li><a href="https://github.com/TylerRosen"><i class="icon-github"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/"><i class="icon-linkedin"></i></a></li>
+                                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                                        </ul>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -324,13 +331,13 @@
                                 <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
                                 <small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
                             </p>
-                            <p class="pull-right">
+                            <!--<p class="pull-right">
                                 <ul class="gtco-social-icons pull-right">
                                     <li><a href="https://github.com/TylerRosen"><i class="icon-github"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/"><i class="icon-linkedin"></i></a></li>
                                     <li><a href="#"><i class="icon-facebook"></i></a></li>
                                 </ul>
-                            </p>
+                            </p>-->
                         </div>
                     </div>
 
