--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div id="gtco-hero" class="js-fullheight" data-section="home">
             <div class="flexslider js-fullheight">
                 <ul class="slides">
-                    <li style="background-image: images/song-roulette">
+                    <li style="background-image: url(images/song-roulette.PNG">
                         <div class="overlay"></div>
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </li>
-                    <li style="background-image: images/hang-movie">
+                    <li style="background-image: url(images/hang-movie.PNG);">
                         <div class="overlay"></div>
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
