Updated icons, adjusted width of navbar

--- a/index.html
+++ b/index.html
@@ -70,10 +70,15 @@
                         <br>
                         <p>Light/Dark</p>
                         </label>
-                    <div class="col-sm-2 col-xs-12">
+
+                    <!--  ****** Tyler, this is the updated code tk 2017 04 26  - the columns add up to 12 -   start -->
+                    <div class="col-sm-4    col-sm-offset-2         col-xs-6    col-xs-offset-3 ">
                         <div id="name"><a href="index.html">Tyler Rosen</a></div>
                     </div>
-                    <div class="col-xs-10 text-right menu-1 main-nav">
+
+                    <div class="col-sm-2"></div> 
+
+                    <div class="col-sm-6  text-right menu-1 main-nav">
                         <ul>
                             <li class="active"><a href="#" data-nav-section="home">Home</a></li>
                             <li><a href="#" data-nav-section="about">About</a></li>
@@ -82,6 +87,10 @@
                             <li><a href="#" data-nav-section="contact">Contact</a></li>
                         </ul>
                     </div>
+
+                    <!-- ****** Tyler, this is the updated code tk 2017 04 26    end -->                    
+
+
                 </div>
 
             </div>
