--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div id="name"><a href="index.html">Tyler Rosen</a></div>
                     </div>
 
-                    <div class="col-sm-2"></div> 
+                    <div class="col-sm-2"></div>
 
                     <div class="col-sm-6  text-right menu-1 main-nav">
                         <ul>
@@ -88,7 +88,7 @@
                         </ul>
                     </div>
 
-                    <!-- ****** Tyler, this is the updated code tk 2017 04 26    end -->                    
+                    <!-- ****** Tyler, this is the updated code tk 2017 04 26    end -->
 
 
                 </div>
@@ -255,50 +255,67 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="images/img_2.jpg" class="gtco-card-item image-popup" title="Project name here.">
+                            <h3 class="projects">Song Roulette</h3>
+                            <a href="images/img_2.jpg" title="Song Roulette">
+                                <!--class="gtco-card-item image-popup"-->
                                 <figure>
-                                    <div class="overlay"><i class="ti-plus"></i></div>
+                                    <a href="https://github.com/TylerRosen/Song-Roulette" target="_blank"><button class="github">Github</button></a>
+                                    <a href="https://songroulette.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
                                     <img src="images/img_2.jpg" alt="Image" class="img-responsive">
                                 </figure>
-                            </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="images/img_1.jpg" class="gtco-card-item image-popup" title="Project name here.">
+                            <h3 class="projects">Hang-Movie</h3>
+                            <a href="images/img_1.jpg" title="Hang-Movie">
                                 <figure>
-                                    <div class="overlay"><i class="ti-plus"></i></div>
+                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                                    <a href="https://github.com/TylerRosen/Hang-Movie" target="_blank"><button class="github">Github</button></a>
+                                    <a href="https://hang-movie.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
                                     <img src="images/img_1.jpg" alt="Image" class="img-responsive">
                                 </figure>
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="images/img_3.jpg" class="gtco-card-item image-popup" title="Project name here.">
+                            <h3 class="projects">Onion Scraper</h3>
+                            <a href="images/img_3.jpg" title="Project name here.">
                                 <figure>
-                                    <div class="overlay"><i class="ti-plus"></i></div>
+                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                                    <a href="https://github.com/TylerRosen/news-scrapper" target="_blank"><button class="github">Github</button></a>
+                                    <a href="https://news-scrapping-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
                                     <img src="images/img_3.jpg" alt="Image" class="img-responsive">
                                 </figure>
                             </a>
                         </div>
 
                         <div class="col-md-4">
-                            <a href="images/img_4.jpg" class="gtco-card-item image-popup" title="Project name here.">
+                            <h3 class="projects">Friend Finder</h3>
+                            <a href="images/img_4.jpg" title="Project name here.">
                                 <figure>
-                                    <div class="overlay"><i class="ti-plus"></i></div>
+                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                                    <a href="https://github.com/TylerRosen/friend-finder" target="_blank"><button class="github">Github</button></a>
+                                    <a href="https://friend-finder-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
                                     <img src="images/img_4.jpg" alt="Image" class="img-responsive">
                                 </figure>
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="images/img_5.jpg" class="gtco-card-item image-popup" title="Project name here.">
+                            <h3 class="projects">Giph-tastic!</h3>
+                            <a href="images/img_5.jpg" title="Project name here.">
                                 <figure>
-                                    <div class="overlay"><i class="ti-plus"></i></div>
+                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                                    <a href="https://github.com/TylerRosen/giphyAPI" target="_blank"><button class="github">Github</button></a>
+                                    <a href="https://giphtastic.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
                                     <img src="images/img_5.jpg" alt="Image" class="img-responsive">
                                 </figure>
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="images/img_6.jpg" class="gtco-card-item image-popup" title="Project name here.">
+                            <h3 class="projects">Movie Trivia</h3>
+                            <a href="images/img_6.jpg" title="Project name here.">
                                 <figure>
-                                    <div class="overlay"><i class="ti-plus"></i></div>
+                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                                    <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="github">Github</button></a>
+                                    <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
                                     <img src="images/img_6.jpg" alt="Image" class="img-responsive">
                                 </figure>
                             </a>
