--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                         <img src="images/icons/html-5.png" id="html" alt="HTML">
                                         <div class="feature-copy">
                                             <h3>HTML</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                         <img src="images/icons/css.png" id="css" alt="CSS">
                                         <div class="feature-copy">
                                             <h3>CSS</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -186,7 +186,7 @@
                                         <img src="images/icons/javascript.png" id="javascript" alt="JS">
                                         <div class="feature-copy">
                                             <h3>JavaScript</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -195,7 +195,7 @@
                                         <img src="images/icons/jquery.png" id="jquery" alt="JQ">
                                         <div class="feature-copy">
                                             <h3>jQuery</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -208,7 +208,7 @@
                                         <img src="images/icons/mysql.png" id="mysql" alt="mySQL">
                                         <div class="feature-copy">
                                             <h3>MySQL</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -217,7 +217,7 @@
                                         <img src="images/icons/mongodb.png" id="mongo" alt="MongoDB">
                                         <div class="feature-copy">
                                             <h3>MongoDB</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -226,7 +226,7 @@
                                         <img src="images/icons/node.png" id="node" alt="Node.js">
                                         <div class="feature-copy">
                                             <h3>Node.js</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                         <img src="images/icons/git.png" id="git" alt="Git">
                                         <div class="feature-copy">
                                             <h3>Git</h3>
-                                            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                            <p class="space">Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -354,7 +354,7 @@
                     <div class="row copyright">
                         <div class="col-md-12">
                             <p class="pull-left">
-                                <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
+                                <small class="block">&copy; Tyler Rosen 2017</small>
                                 <small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
                             </p>
                             <!--<p class="pull-right">
