--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
-                                    <h2>Song Roulette.</h2>
+                                    <h2>Song Roulette</h2>
                                     <p><a href="https://songroulette.herokuapp.com/" target="_blank" class="btn btn-primary btn-lg">View</a></p>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
-                                    <h2>Fantasizer</h2>
+                                    <h2>Fan-tasize</h2>
                                     <!--<p><a href=insert link to project target="_blank" class="btn btn-primary btn-lg">View</a></p>-->
                                 </div>
                             </div>
@@ -141,6 +141,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
                         <h2>About</h2>
+                        <img src="images/portrait.jpg" class="portrait" alt="Edit photo">
+
                         <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
                     </div>
                 </div>
@@ -335,9 +337,9 @@
                                     <h3>If you have inqueries please email me at <a href="#">tylermrosen@gmail.com</a></h3>
                                     <p class="pull-right">
                                         <ul class="gtco-social-icons pull-right">
-                                            <li><a href="https://github.com/TylerRosen"><i class="icon-github"></i></a></li>
-                                            <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/"><i class="icon-linkedin"></i></a></li>
-                                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                                            <li><a href="https://github.com/TylerRosen" target="_blank"><i class="icon-github"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/tyler-rosen-37733268/" target="_blank"><i class="icon-linkedin"></i></a></li>
+                                            <li><a href="#"><i class="icon-facebook" target="_blank"></i></a></li>
                                         </ul>
                                     </p>
                                 </div>
