--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Tyler Rosen Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+    <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
+    />
     <meta name="author" content="gettemplates.co" />
 
     <!-- Facebook and Twitter integration -->
@@ -110,7 +111,7 @@
                             </div>
                         </div>
                     </li>
-                    <li style="background-image: url(images/hang-movie.PNG);">
+                    <li style="background-image: url(images/hang-movie.PNG)">
                         <div class="overlay"></div>
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -121,7 +122,7 @@
                             </div>
                         </div>
                     </li>
-                    <li style="background-image: url(images/img_bg_3.jpg);">
+                    <li style="background-image: url(images/img_bg_3.jpg)">
                         <div class="overlay"></div>
                         <div class="container">
                             <div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -143,7 +144,8 @@
                         <h2>About</h2>
                         <img src="images/portrait.jpg" class="portrait" alt="Edit photo">
 
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit
+                            ab aliquam dolor eius.</p>
                     </div>
                 </div>
             </div>
@@ -255,77 +257,94 @@
                             <p>Projects and applications I have built and contributed to.</p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h3 class="projects">Song Roulette</h3>
-                            <a href="images/img_2.jpg" title="Song Roulette">
-                                <!--class="gtco-card-item image-popup"-->
-                                <figure>
-                                    <a href="https://github.com/TylerRosen/Song-Roulette" target="_blank"><button class="github">Github</button></a>
-                                    <a href="https://songroulette.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
-                                    <img src="images/img_2.jpg" alt="Image" class="img-responsive">
-                                </figure>
-                        </div>
-                        <div class="col-md-4">
-                            <h3 class="projects">Hang-Movie</h3>
-                            <a href="images/img_1.jpg" title="Hang-Movie">
-                                <figure>
-                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
-                                    <a href="https://github.com/TylerRosen/Hang-Movie" target="_blank"><button class="github">Github</button></a>
-                                    <a href="https://hang-movie.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
-                                    <img src="images/img_1.jpg" alt="Image" class="img-responsive">
-                                </figure>
-                            </a>
-                        </div>
-                        <div class="col-md-4">
-                            <h3 class="projects">Onion Scraper</h3>
-                            <a href="images/img_3.jpg" title="Project name here.">
-                                <figure>
-                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
-                                    <a href="https://github.com/TylerRosen/news-scrapper" target="_blank"><button class="github">Github</button></a>
-                                    <a href="https://news-scrapping-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
-                                    <img src="images/img_3.jpg" alt="Image" class="img-responsive">
-                                </figure>
-                            </a>
-                        </div>
 
-                        <div class="col-md-4">
+                     <div class="col-md-4">
                             <h3 class="projects">Friend Finder</h3>
-                            <a href="images/img_4.jpg" title="Project name here.">
+                            <!--<a href="images/img_4.jpg" title="Project name here.">-->
+                            <p>Web app that allows users that takes survey data and matches those with similar results - built with HTML, CSS, Bootstrap, JavaScript, jQuery,
+                                Node
+                            </p>
                                 <figure>
                                     <!--<div class="overlay"><i class="ti-plus"></i></div>-->
                                     <a href="https://github.com/TylerRosen/friend-finder" target="_blank"><button class="github">Github</button></a>
-                                    <a href="https://friend-finder-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
-                                    <img src="images/img_4.jpg" alt="Image" class="img-responsive">
-                                </figure>
-                            </a>
+                            <a href="https://friend-finder-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
+
+                            <!--<img src="images/img_4.jpg" alt="Image" class="img-responsive">-->
+                            </figure>
+                            <!--</a>-->
                         </div>
                         <div class="col-md-4">
                             <h3 class="projects">Giph-tastic!</h3>
-                            <a href="images/img_5.jpg" title="Project name here.">
+                            <!--<a href="images/img_5.jpg" title="Project name here.">-->
+                            <p>Web app that displays gifs based after entering search term, clicking gif pauses/unpauses - built with HTML, CSS, Javascript, jQuery, AJAX</p>
                                 <figure>
                                     <!--<div class="overlay"><i class="ti-plus"></i></div>-->
                                     <a href="https://github.com/TylerRosen/giphyAPI" target="_blank"><button class="github">Github</button></a>
-                                    <a href="https://giphtastic.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
-                                    <img src="images/img_5.jpg" alt="Image" class="img-responsive">
-                                </figure>
-                            </a>
+                            <a href="https://giphtastic.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
+
+                            <!--<img src="images/img_5.jpg" alt="Image" class="img-responsive">-->
+                            </figure>
+                            <!--</a>-->
                         </div>
                         <div class="col-md-4">
                             <h3 class="projects">Movie Trivia</h3>
-                            <a href="images/img_6.jpg" title="Project name here.">
+                            <!--<a href="images/img_6.jpg" title="Project name here."> -->
+                            <p>A trivia game about well known films, users must answer within the time limit - built with HTML, CSS, Bootstrap, JavaScript, jQuery.</p>
                                 <figure>
                                     <!--<div class="overlay"><i class="ti-plus"></i></div>-->
                                     <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="github">Github</button></a>
-                                    <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
-                                    <img src="images/img_6.jpg" alt="Image" class="img-responsive">
-                                </figure>
-                            </a>
+                            <a href="https://movie-trivia.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>
+
+                            <!--<img src="images/img_6.jpg" alt="Image" class="img-responsive">-->
+                            </figure>
+                            <!--</a>-->
                         </div>
+
+                    <!--<div class="row">
+                        <div class="col-md-4">
+                            <h3 class="projects">Song Roulette</h3>
+                            <a href="images/img_2.jpg" title="Song Roulette"></a>
+                            <p>A spotify based application that allows users to like/dislike songs - using HTML, CSS, Bootstrap, Highcharts, Javascript, JQuery, Firebase, AJAX, API's</p>
+                            <!--class="gtco-card-item image-popup"-->
+                            <!--<figure>
+                                <a href="https://github.com/TylerRosen/Song-Roulette" target="_blank"><button class="github">Github</button></a>
+                                <a href="https://songroulette.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>-->
+
+                                <!--<img src="images/img_2.jpg" alt="Image" class="img-responsive">-->
+                            <!--</figure>
+                        </div>
+                        <div class="col-md-4">
+                            <h3 class="projects">Hang-Movie</h3>-->
+                            <!--<a href="images/img_1.jpg" title="Hang-Movie">-->
+                                <!--<p>A hangman game that uses famous movie quotes - built with HTML, CSS, Javascript, jQuery, Handlebars, Express, MySQL.</p>
+                                <figure>-->
+                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                                    <!--<a href="https://github.com/TylerRosen/Hang-Movie" target="_blank"><button class="github">Github</button></a>
+                                    <a href="https://hang-movie.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>-->
+
+                                    <!--<img src="images/img_1.jpg" alt="Image" class="img-responsive">-->
+                                <!--</figure>-->
+                            <!--</a>-->
+                        <!--</div>
+                        <div class="col-md-4">
+                            <h3 class="projects">Onion Scraper</h3>-->
+                            <!--<a href="images/img_3.jpg" title="Project name here.">-->
+                            <!--<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+                                <figure>-->
+                                    <!--<div class="overlay"><i class="ti-plus"></i></div>-->
+                                    <!--<a href="https://github.com/TylerRosen/news-scrapper" target="_blank"><button class="github">Github</button></a>
+                            <a href="https://news-scrapping-site.herokuapp.com/" target="_blank"><button class="heroku">Heroku</button></a>-->
+
+                            <!--<img src="images/img_3.jpg" alt="Image" class="img-responsive">-->
+                            <!--</figure>-->
+                            <!--</a>-->
+                        <!--</div>-->
 
                     </div>
                 </div>
             </div>
+
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
             <div id="gtco-contact" data-section="contact" class="gtco-cover gtco-cover-xs" style="background-image:url(images/img_bg_2.jpg);">
                 <div class="overlay"></div>
